Added a plot method in the environment. Also updated notebooks

--- a/demo/02. Methods/01. Full Scan.ipynb
+++ b/demo/02. Methods/01. Full Scan.ipynb
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:04<00:00, 338.92it/s]\n"
+      "(1440.000s) ms_level=1: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:26<00:00, 54.97it/s]\n"
      ]
     }
    ],
@@ -149,9 +149,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:30:28.291 | DEBUG    | vimms.Environment:write_mzML:148 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\ms1_controller.mzML\n",
-      "2021-08-27 23:30:28.292 | INFO     | vimms.Common:create_if_not_exist:279 - Created C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\n",
-      "2021-08-27 23:30:28.925 | DEBUG    | vimms.Environment:write_mzML:151 - mzML file successfully written!\n"
+      "2021-08-30 15:04:30.246 | DEBUG    | vimms.Environment:write_mzML:149 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\ms1_controller.mzML\n",
+      "2021-08-30 15:04:37.960 | DEBUG    | vimms.Environment:write_mzML:152 - mzML file successfully written!\n"
      ]
     }
    ],
