--- a/demo/02. Methods/03. SmartROI.ipynb
+++ b/demo/02. Methods/03. SmartROI.ipynb
@@ -141,7 +141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:05<00:00, 277.81it/s]\n"
+      "(1440.200s) ms_level=1: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001155/1440 [00:28<00:00, 49.84it/s]\n"
      ]
     }
    ],
@@ -172,8 +172,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-28 00:01:03.920 | DEBUG    | vimms.Environment:write_mzML:148 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
-      "2021-08-28 00:01:04.637 | DEBUG    | vimms.Environment:write_mzML:151 - mzML file successfully written!\n"
+      "2021-08-30 15:04:12.258 | DEBUG    | vimms.Environment:write_mzML:149 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
+      "2021-08-30 15:04:24.938 | DEBUG    | vimms.Environment:write_mzML:152 - mzML file successfully written!\n"
      ]
     }
    ],
