--- a/demo/02. Methods/04. WeightedDEW.ipynb
+++ b/demo/02. Methods/04. WeightedDEW.ipynb
@@ -134,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:04<00:00, 328.50it/s]\n"
+      "(1440.000s) ms_level=2: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001498/1440 [00:26<00:00, 53.51it/s]\n"
      ]
     }
    ],
@@ -165,8 +165,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-28 00:01:25.967 | DEBUG    | vimms.Environment:write_mzML:148 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
-      "2021-08-28 00:01:26.436 | DEBUG    | vimms.Environment:write_mzML:151 - mzML file successfully written!\n"
+      "2021-08-30 15:04:38.995 | DEBUG    | vimms.Environment:write_mzML:149 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
+      "2021-08-30 15:04:49.935 | DEBUG    | vimms.Environment:write_mzML:152 - mzML file successfully written!\n"
      ]
     }
    ],
