--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,14 @@
+@article{guijas2018metabolomics,
+  title={Metabolomics activity screening for identifying metabolites that modulate phenotype},
+  author={Guijas, Carlos and Montenegro-Burke, J Rafael and Warth, Benedikt and Spilker, Mary E and Siuzdak, Gary},
+  journal={Nature biotechnology},
+  volume={36},
+  number={4},
+  pages={316--320},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
 @ARTICLE{smith2014proteomics,
   title={Proteomics, lipidomics, metabolomics: a mass spectrometry tutorial from a computer scientist's point of view},
   author={Smith, Rob and Mathis, Andrew D and Ventura, Dan and Prince, John T},
