--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -103,3 +103,11 @@
   year={2015},
   publisher={BioMed Central}
 }
+
+@MISC{Thermo_Fisher_Scientific_undated-ny,
+  title        = "Thermo Fisher Application Programming Interface",
+  booktitle    = "Thermo Fisher Application Programming Interface",
+  author       = "{``Thermo Fisher Scientific''}",
+  howpublished = "\url{https://github.com/thermofisherlsms/iapi}",
+  note         = "Accessed: 2020-8-18"
+}
