Progress bar update

--- a/experimental/MakeSpectralLibraries.ipynb
+++ b/experimental/MakeSpectralLibraries.ipynb
@@ -17,7 +17,7 @@
     "sys.path.append('/Users/simon/git/vimms')\n",
     "sys.path.insert(0,'/Users/simon/git/mass-spec-utils/')\n",
     "from vimms.Common import save_obj\n",
-    "from tqdm import tqdm"
+    "from tqdm.auto import tqdm"
    ]
   },
   {
