--- a/experimental/mod_ms/vinny_method.ipynb
+++ b/experimental/mod_ms/vinny_method.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Threaded logging object. Messages are added by other things and periodically new messages\n",
     "# are printed.\n",
-    "class Logger(object):\n",
+    "class Logger():\n",
     "    def __init__(self):\n",
     "        self.messages = []\n",
     "        self.print_start_pos = 0\n",
@@ -56,7 +56,7 @@
    "source": [
     "SMALL_TIME = 1e-10\n",
     "\n",
-    "class Scan(object):\n",
+    "class Scan():\n",
     "    # Simple object to store a pretend scan\n",
     "    def __init__(self,scan_id,start_time,end_time,scan_type):\n",
     "        self.start_time = start_time # time the scan started\n",
@@ -66,7 +66,7 @@
     "    def __str__(self):\n",
     "        return \"{} scan ({}) starting and end time: {:.3f} -> {:.3f}\".format(self.scan_type,self.scan_id,self.start_time,self.end_time)\n",
     "    \n",
-    "class Command(object):\n",
+    "class Command():\n",
     "    # Command sent from controller to MS\n",
     "    def __init__(self,scan_type,scan_id,submit_time):\n",
     "        self.scan_type = scan_type # method, ms1, or ms2\n",
@@ -75,7 +75,7 @@
     "    def __str__(self):\n",
     "        return \"Command {} type = {}\".format(self.scan_id,self.scan_type)\n",
     "\n",
-    "class MS(object):\n",
+    "class MS():\n",
     "    # MS\n",
     "    def __init__(self,command_queue,scan_queue):\n",
     "        self.time = 0 # the time w.r.t MS\n",
@@ -127,7 +127,7 @@
     "\n",
     "            \n",
     "            \n",
-    "class Controller(object):\n",
+    "class Controller():\n",
     "    # Simple controller object\n",
     "    def __init__(self,command_q,scan_q,N = 10):\n",
     "        self.command_q = command_q\n",
