Initial notebook updates

--- a/demo/01. Data/01. Extracting Chemicals from HMDB.ipynb
+++ b/demo/01. Data/01. Extracting Chemicals from HMDB.ipynb
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\tests\\\\fixtures'"
+       "'/Users/joewandy/Work/git/vimms/tests/fixtures'"
       ]
      },
      "execution_count": 7,
@@ -125,13 +125,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compound_file = Path(data_dir, 'hmdb_compounds.p')\n",
-    "hmdb_compounds = load_obj(compound_file)\n",
-    "if hmdb_compounds is None: # if file does not exist\n",
-    "\n",
+    "try:\n",
+    "    compound_file = Path(data_dir, 'hmdb_compounds.p')\n",
+    "    hmdb_compounds = load_obj(compound_file)\n",
+    "except FileNotFoundError:\n",
     "    # download the entire HMDB metabolite database\n",
     "    url = 'http://www.hmdb.ca/system/downloads/current/hmdb_metabolites.zip'\n",
-    "\n",
     "    out_file = download_file(url)\n",
     "    compounds = extract_hmdb_metabolite(out_file, delete=True)\n",
     "    save_obj(compounds, compound_file)"
@@ -160,8 +159,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:06:36.899 | DEBUG    | vimms.ChemicalSamplers:sample:65 - 73822 unique formulas in filtered database\n",
-      "2021-08-27 23:06:36.902 | DEBUG    | vimms.ChemicalSamplers:sample:67 - Sampled formulas\n"
+      "2022-02-23 09:55:24.749 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
+      "2022-02-23 09:55:24.766 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n"
      ]
     }
    ],
@@ -185,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "(C22H32O6, '10-Hydroperoxy-H4-neuroprostane')"
+       "(C62H110O6, 'TG(15:0/20:4(5Z,8Z,11Z,14Z)/24:1(15Z))')"
       ]
      },
      "execution_count": 10,
@@ -235,9 +234,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:06:41.654 | DEBUG    | vimms.ChemicalSamplers:sample:65 - 73822 unique formulas in filtered database\n",
-      "2021-08-27 23:06:41.656 | DEBUG    | vimms.ChemicalSamplers:sample:67 - Sampled formulas\n",
-      "2021-08-27 23:06:41.742 | DEBUG    | vimms.Chemicals:sample:243 - Sampled rt and intensity values and chromatograms\n"
+      "2022-02-23 09:55:30.269 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
+      "2022-02-23 09:55:30.274 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n",
+      "2022-02-23 09:55:30.412 | DEBUG    | vimms.Chemicals:sample:324 - Sampled rt and intensity values and chromatograms\n"
      ]
     }
    ],
@@ -254,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "KnownChemical - 'C52H100O6' rt=1234.93 max_intensity=10818.75"
+       "KnownChemical - 'C12H14O7' rt=343.41 max_intensity=301650.99"
       ]
      },
      "execution_count": 13,
@@ -338,11 +337,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(1440.200s) ms_level=1: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000000586/1440 [00:11<00:00, 125.85it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9dd473230141423188477d7e7e4b5eb9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1440 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -367,8 +373,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:06:53.943 | DEBUG    | vimms.Environment:write_mzML:148 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\results\\hmdb_topn_controller.mzML\n",
-      "2021-08-27 23:07:00.898 | DEBUG    | vimms.Environment:write_mzML:151 - mzML file successfully written!\n"
+      "2022-02-23 09:55:44.368 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/01. Data/results/hmdb_topn_controller.mzML\n",
+      "2022-02-23 09:55:44.369 | INFO     | vimms.Common:create_if_not_exist:309 - Created /Users/joewandy/Work/git/vimms/demo/01. Data/results\n",
+      "2022-02-23 09:55:50.175 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
      ]
     }
    ],
@@ -396,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
