--- a/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
+++ b/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\n"
+      "Found /Users/joewandy/Work/git/vimms/demo/01. Data/example_data\n"
      ]
     }
    ],
@@ -136,6 +136,13 @@
    "metadata": {},
    "source": [
     "Extract chemicals from the beer and urine mzML files using `ChemicalMixtureFromMZML` class. The results are a list of `UnknownChemical` objects for each input mzML file. Once created, we can persist the list of `UnknownChemicals` to the file system by calling the `save_obj` method from ViMMS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the `min_intensity` threshold (1.75E5) is set very high here so the notebook completes quickly. However this means you'd only extract large regions-of-interests (ROIs) from the data, and smaller ones are omitted. For a more accurate simulation, you should lower this threshold value to e.g. 1000."
    ]
   },
   {
@@ -169,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\demo\\\\01. Data\\\\example_data\\\\beers\\\\fragmentation\\\\mzML\\\\Beer_multibeers_1_T10_POS.mzML'"
+       "'/Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beers/fragmentation/mzML/Beer_multibeers_1_T10_POS.mzML'"
       ]
      },
      "execution_count": 10,
@@ -191,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:47:45.225 | DEBUG    | vimms.Chemicals:_extract_rois:349 - Extracted 25759 good ROIs from C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\beers\\fragmentation\\mzML\\Beer_multibeers_1_T10_POS.mzML\n"
+      "2022-02-23 10:03:34.087 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 25759 good ROIs from /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beers/fragmentation/mzML/Beer_multibeers_1_T10_POS.mzML\n"
      ]
     }
    ],
@@ -210,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:47:47.691 | INFO     | vimms.Common:save_obj:299 - Saving <class 'list'> to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\beers\\datasets\\beer_1.p\n"
+      "2022-02-23 10:03:36.248 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beers/datasets/beer_1.p\n"
      ]
     }
    ],
@@ -234,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\demo\\\\01. Data\\\\example_data\\\\urines\\\\fragmentation\\\\mzML\\\\Urine_StrokeDrugs_02_T10_POS.mzML'"
+       "'/Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urines/fragmentation/mzML/Urine_StrokeDrugs_02_T10_POS.mzML'"
       ]
      },
      "execution_count": 13,
@@ -256,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:48:02.278 | DEBUG    | vimms.Chemicals:_extract_rois:349 - Extracted 37233 good ROIs from C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\urines\\fragmentation\\mzML\\Urine_StrokeDrugs_02_T10_POS.mzML\n"
+      "2022-02-23 10:03:51.020 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 37233 good ROIs from /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urines/fragmentation/mzML/Urine_StrokeDrugs_02_T10_POS.mzML\n"
      ]
     }
    ],
@@ -275,7 +282,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:48:05.419 | INFO     | vimms.Common:save_obj:299 - Saving <class 'list'> to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\urines\\datasets\\urine_1.p\n"
+      "2022-02-23 10:03:53.962 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urines/datasets/urine_1.p\n"
      ]
     }
    ],
@@ -354,11 +361,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-27 23:48:16.736 | WARNING  | __main__:<module>:3 - Processing beer\n",
-      "(1440.000s) ms_level=2: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001357/1440 [00:42<00:00, 33.94it/s]\n",
-      "2021-08-27 23:49:12.571 | WARNING  | __main__:<module>:3 - Processing urine\n",
-      "(1440.000s) ms_level=2: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001355/1440 [00:51<00:00, 27.94it/s]\n"
+      "2022-02-23 10:04:03.680 | WARNING  | __main__:<module>:3 - Processing beer\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55d41c89c65945129348c6e4faf6a60b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1440 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-23 10:04:53.798 | WARNING  | __main__:<module>:3 - Processing urine\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "977fa5b21c1b4f55a62060583c79ad76",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1440 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -400,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
