--- a/demo/02. Methods/01. Full Scan.ipynb
+++ b/demo/02. Methods/01. Full Scan.ipynb
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import os"
    ]
   },
   {
@@ -61,7 +62,7 @@
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
     "from vimms.Controller import SimpleMs1Controller\n",
     "from vimms.Environment import Environment\n",
-    "from vimms.Common import *"
+    "from vimms.Common import POSITIVE, load_obj, set_log_level_warning, set_log_level_debug"
    ]
   },
   {
@@ -115,11 +116,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(1440.000s) ms_level=1: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:26<00:00, 54.97it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f12d79cde794c0ab026ae4c2c18344d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1440 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -149,8 +157,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-30 15:04:30.246 | DEBUG    | vimms.Environment:write_mzML:149 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\ms1_controller.mzML\n",
-      "2021-08-30 15:04:37.960 | DEBUG    | vimms.Environment:write_mzML:152 - mzML file successfully written!\n"
+      "2022-02-22 14:08:40.314 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/ms1_controller.mzML\n",
+      "2022-02-22 14:08:40.315 | INFO     | vimms.Common:create_if_not_exist:309 - Created /Users/joewandy/Work/git/vimms/demo/02. Methods/results\n",
+      "2022-02-22 14:08:44.948 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
      ]
     }
    ],
@@ -178,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
