--- a/demo/02. Methods/03. SmartROI.ipynb
+++ b/demo/02. Methods/03. SmartROI.ipynb
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import os"
    ]
   },
   {
@@ -61,7 +62,7 @@
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
     "from vimms.Controller import TopN_SmartRoiController\n",
     "from vimms.Environment import Environment\n",
-    "from vimms.Common import *"
+    "from vimms.Common import POSITIVE, load_obj, set_log_level_warning, set_log_level_debug"
    ]
   },
   {
@@ -138,11 +139,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(1440.200s) ms_level=1: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001155/1440 [00:28<00:00, 49.84it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "305dfb14d4d145f1acacce39217bb381",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1440 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -172,8 +180,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-30 15:04:12.258 | DEBUG    | vimms.Environment:write_mzML:149 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
-      "2021-08-30 15:04:24.938 | DEBUG    | vimms.Environment:write_mzML:152 - mzML file successfully written!\n"
+      "2022-02-22 14:11:08.124 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/smartroi_controller.mzML\n",
+      "2022-02-22 14:11:14.378 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
      ]
     }
    ],
@@ -201,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
