--- a/demo/02. Methods/04. WeightedDEW.ipynb
+++ b/demo/02. Methods/04. WeightedDEW.ipynb
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import os"
    ]
   },
   {
@@ -61,7 +62,7 @@
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
     "from vimms.Controller import WeightedDEWController\n",
     "from vimms.Environment import Environment\n",
-    "from vimms.Common import *"
+    "from vimms.Common import POSITIVE, load_obj, set_log_level_warning, set_log_level_debug"
    ]
   },
   {
@@ -131,11 +132,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(1440.000s) ms_level=2: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001498/1440 [00:26<00:00, 53.51it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7076b6660c8147f9b1a90cbeaa235768",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1440 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -165,8 +173,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-08-30 15:04:38.995 | DEBUG    | vimms.Environment:write_mzML:149 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
-      "2021-08-30 15:04:49.935 | DEBUG    | vimms.Environment:write_mzML:152 - mzML file successfully written!\n"
+      "2022-02-22 14:11:27.897 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/02. Methods/results/weighteddew_controller.mzML\n",
+      "2022-02-22 14:11:34.091 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
      ]
     }
    ],
@@ -194,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
