--- a/examples/01. vimms (Wandy et al 2019)/03. Multiple Samples Example.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/03. Multiple Samples Example.ipynb
@@ -1231,7 +1231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1245,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
