--- a/demo/01. Data/01. Extracting Chemicals from HMDB.ipynb
+++ b/demo/01. Data/01. Extracting Chemicals from HMDB.ipynb
@@ -104,36 +104,44 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-24 14:48:01.767 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in hmdb_compounds.p. Please regenerate this file.\n",
+      "2022-02-24 14:48:02.011 | INFO     | vimms.Common:download_file:453 - Downloading hmdb_compounds.p\n"
+     ]
+    },
+    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48132b355310428e89f02d2b75ad3af4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "'/Users/joewandy/Work/git/vimms/tests/fixtures'"
+       "  0%|          | 0.00/8.38k [00:00<?, ?KB/s]"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
-    "data_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "compound_file = 'hmdb_compounds.p'\n",
     "try:\n",
-    "    compound_file = Path(data_dir, 'hmdb_compounds.p')\n",
     "    hmdb_compounds = load_obj(compound_file)\n",
     "except FileNotFoundError:\n",
-    "    # download the entire HMDB metabolite database\n",
-    "    url = 'http://www.hmdb.ca/system/downloads/current/hmdb_metabolites.zip'\n",
-    "    out_file = download_file(url)\n",
-    "    compounds = extract_hmdb_metabolite(out_file, delete=True)\n",
-    "    save_obj(compounds, compound_file)"
+    "    \n",
+    "    # download the entire HMDB metabolite database and extract chemicals from it\n",
+    "    # url = 'http://www.hmdb.ca/system/downloads/current/hmdb_metabolites.zip'\n",
+    "    # out_file = download_file(url)\n",
+    "    # compounds = extract_hmdb_metabolite(out_file, delete=True)\n",
+    "    # save_obj(compounds, compound_file)\n",
+    "    \n",
+    "    # above could be quite slow slow, so download a pre-processed result instead\n",
+    "    url = 'https://github.com/glasgowcompbio/vimms-data/raw/main/hmdb_compounds.p'\n",
+    "    download_file(url, compound_file)\n",
+    "    hmdb_compounds = load_obj(compound_file)"
    ]
   },
   {
@@ -152,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 09:55:24.749 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
-      "2022-02-23 09:55:24.766 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n"
+      "2022-02-24 14:48:08.777 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
+      "2022-02-24 14:48:08.777 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n"
      ]
     }
    ],
@@ -178,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(C62H110O6, 'TG(15:0/20:4(5Z,8Z,11Z,14Z)/24:1(15Z))')"
+       "(C55H106O6, 'TG(a-21:0/10:0/21:0)[rac]')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +215,7 @@
        "(vimms.Common.Formula, str)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 09:55:30.269 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
-      "2022-02-23 09:55:30.274 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n",
-      "2022-02-23 09:55:30.412 | DEBUG    | vimms.Chemicals:sample:324 - Sampled rt and intensity values and chromatograms\n"
+      "2022-02-24 14:48:14.017 | DEBUG    | vimms.ChemicalSamplers:sample:73 - 73822 unique formulas in filtered database\n",
+      "2022-02-24 14:48:14.017 | DEBUG    | vimms.ChemicalSamplers:sample:79 - Sampled formulas\n",
+      "2022-02-24 14:48:14.150 | DEBUG    | vimms.Chemicals:sample:324 - Sampled rt and intensity values and chromatograms\n"
      ]
     }
    ],
@@ -247,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KnownChemical - 'C12H14O7' rt=343.41 max_intensity=301650.99"
+       "KnownChemical - 'C46H76O13P2' rt=1499.63 max_intensity=767027.84"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,13 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dd473230141423188477d7e7e4b5eb9",
+       "model_id": "1a1f2db3efd246d283f6d7fa48d26f06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,16 +374,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 09:55:44.368 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to /Users/joewandy/Work/git/vimms/demo/01. Data/results/hmdb_topn_controller.mzML\n",
-      "2022-02-23 09:55:44.369 | INFO     | vimms.Common:create_if_not_exist:309 - Created /Users/joewandy/Work/git/vimms/demo/01. Data/results\n",
-      "2022-02-23 09:55:50.175 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
+      "2022-02-24 14:48:37.644 | DEBUG    | vimms.Environment:write_mzML:177 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\results\\hmdb_topn_controller.mzML\n",
+      "2022-02-24 14:48:47.694 | DEBUG    | vimms.Environment:write_mzML:181 - mzML file successfully written!\n"
      ]
     }
    ],
@@ -403,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
