--- a/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
+++ b/demo/01. Data/02. Extracting Chemicals from an mzML file.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://researchdata.gla.ac.uk/870/2/example_data.zip'\n",
+    "url = 'https://github.com/glasgowcompbio/vimms-data/raw/main/example_data.zip'\n",
     "base_dir = os.path.join(os.getcwd(), 'example_data')"
    ]
   },
@@ -110,7 +110,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found /Users/joewandy/Work/git/vimms/demo/01. Data/example_data\n"
+      "Creating C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-24 16:44:32.327 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "644f5c6580224a71855e7858872f8678",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0.00/64.7k [00:00<?, ?KB/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-24 16:44:38.770 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb319fb6a5ba40d8b1cfd3e65f0356e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-24 16:44:40.667 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
      ]
     }
    ],
@@ -176,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beers/fragmentation/mzML/Beer_multibeers_1_T10_POS.mzML'"
+       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\demo\\\\01. Data\\\\example_data\\\\Beer_multibeers_1_T10_POS.mzML'"
       ]
      },
      "execution_count": 10,
@@ -185,7 +234,7 @@
     }
    ],
    "source": [
-    "mzml_file = os.path.join(base_dir, 'beers', 'fragmentation', 'mzML', 'Beer_multibeers_1_T10_POS.mzML')\n",
+    "mzml_file = os.path.join(base_dir, 'Beer_multibeers_1_T10_POS.mzML')\n",
     "mzml_file"
    ]
   },
@@ -198,7 +247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:03:34.087 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 25759 good ROIs from /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beers/fragmentation/mzML/Beer_multibeers_1_T10_POS.mzML\n"
+      "2022-02-24 16:45:13.864 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 25759 good ROIs from C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\Beer_multibeers_1_T10_POS.mzML\n"
      ]
     }
    ],
@@ -217,12 +266,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:03:36.248 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/beers/datasets/beer_1.p\n"
+      "2022-02-24 16:45:18.867 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\beer_1.p\n"
      ]
     }
    ],
    "source": [
-    "out_name = os.path.join(base_dir, 'beers', 'datasets', 'beer_1.p')\n",
+    "out_name = os.path.join(base_dir, 'beer_1.p')\n",
     "save_obj(dataset, out_name)"
    ]
   },
@@ -241,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urines/fragmentation/mzML/Urine_StrokeDrugs_02_T10_POS.mzML'"
+       "'C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\vimms\\\\demo\\\\01. Data\\\\example_data\\\\Urine_StrokeDrugs_02_T10_POS.mzML'"
       ]
      },
      "execution_count": 13,
@@ -250,7 +299,7 @@
     }
    ],
    "source": [
-    "mzml_file = os.path.join(base_dir, 'urines', 'fragmentation', 'mzML', 'Urine_StrokeDrugs_02_T10_POS.mzML')\n",
+    "mzml_file = os.path.join(base_dir, 'Urine_StrokeDrugs_02_T10_POS.mzML')\n",
     "mzml_file"
    ]
   },
@@ -263,7 +312,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:03:51.020 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 37233 good ROIs from /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urines/fragmentation/mzML/Urine_StrokeDrugs_02_T10_POS.mzML\n"
+      "2022-02-24 16:46:44.116 | DEBUG    | vimms.Chemicals:_extract_rois:458 - Extracted 37233 good ROIs from C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\Urine_StrokeDrugs_02_T10_POS.mzML\n"
      ]
     }
    ],
@@ -282,12 +331,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:03:53.962 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to /Users/joewandy/Work/git/vimms/demo/01. Data/example_data/urines/datasets/urine_1.p\n"
+      "2022-02-24 16:46:57.931 | INFO     | vimms.Common:save_obj:329 - Saving <class 'list'> to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\01. Data\\example_data\\urine_1.p\n"
      ]
     }
    ],
    "source": [
-    "out_name = os.path.join(base_dir, 'urines', 'datasets', 'urine_1.p')\n",
+    "out_name = os.path.join(base_dir, 'urine_1.p')\n",
     "save_obj(dataset, out_name)"
    ]
   },
@@ -313,8 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beer_dataset = load_obj(os.path.join(base_dir, 'beers', 'datasets', 'beer_1.p'))\n",
-    "urine_dataset = load_obj(os.path.join(base_dir, 'urines', 'datasets', 'urine_1.p'))\n",
+    "beer_dataset = load_obj(os.path.join(base_dir, 'beer_1.p'))\n",
+    "urine_dataset = load_obj(os.path.join(base_dir, 'urine_1.p'))\n",
     "datasets = {\n",
     "    'beer': beer_dataset, \n",
     "    'urine': urine_dataset\n",
@@ -354,20 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:04:03.680 | WARNING  | __main__:<module>:3 - Processing beer\n"
+      "2022-02-24 16:47:37.617 | WARNING  | __main__:<module>:3 - Processing beer\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55d41c89c65945129348c6e4faf6a60b",
+       "model_id": "ff63d46acc644912941842fa5b220292",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,13 +431,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:04:53.798 | WARNING  | __main__:<module>:3 - Processing urine\n"
+      "2022-02-24 16:51:08.030 | WARNING  | __main__:<module>:3 - Processing urine\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "977fa5b21c1b4f55a62060583c79ad76",
+       "model_id": "8cb6b80c664c4a5f8a50abcdb82d7eda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
