--- a/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
@@ -100,14 +100,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## a. Download beer and urine files"
+    "## a. Download example mzML files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we download the beer and urine .mzML files used as examples in the paper if they don't exist."
+    "Here we download the beer .mzML files used as examples in the paper if they don't exist."
    ]
   },
   {
@@ -129,25 +129,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data\n"
+      "Creating C:\\Users\\joewa\\Work\\git\\vimms\\examples\\01. vimms (Wandy et al 2019)\\example_data\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:50:03.700 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
+      "2022-02-24 16:56:31.386 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eeb1a19c37274304a822164f2e898cf2",
+       "model_id": "562dead3f068422fadc3dfaca5978623",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/51.7k [00:00<?, ?KB/s]"
+       "  0%|          | 0.00/64.7k [00:00<?, ?KB/s]"
       ]
      },
      "metadata": {},
@@ -157,18 +157,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:50:06.637 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
+      "2022-02-24 16:56:36.405 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85bec3cf76ad4a5b8d1440691826e0ca",
+       "model_id": "413cce6a8cb34699845b80b313a792ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?it/s]"
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -178,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:50:07.245 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
+      "2022-02-24 16:56:37.947 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
      ]
     }
    ],
@@ -208,49 +208,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:50:12.109 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data/hmdb_compounds.p. Please regenerate this file.\n",
-      "2022-02-23 10:50:13.130 | INFO     | vimms.Common:download_file:453 - Downloading hmdb_metabolites.zip\n"
+      "2022-02-24 16:56:38.103 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in C:\\Users\\joewa\\Work\\git\\vimms\\examples\\01. vimms (Wandy et al 2019)\\example_data\\hmdb_compounds.p. Please regenerate this file.\n",
+      "2022-02-24 16:56:39.715 | INFO     | vimms.Common:download_file:453 - Downloading C:\\Users\\joewa\\Work\\git\\vimms\\examples\\01. vimms (Wandy et al 2019)\\example_data\\hmdb_compounds.p\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61f6755b5da8491c9193af8014d991a1",
+       "model_id": "2629b8bc2f334c43968699c41fb3787a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/932k [00:00<?, ?KB/s]"
+       "  0%|          | 0.00/8.38k [00:00<?, ?KB/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-23 10:53:14.258 | DEBUG    | vimms.FeatureExtraction:extract_hmdb_metabolite:14 - Extracting HMDB metabolites from hmdb_metabolites.zip\n"
-     ]
     }
    ],
    "source": [
+    "out_file = 'hmdb_compounds.p'\n",
+    "compound_file = Path(base_dir, out_file)\n",
     "try:\n",
-    "    compound_file = Path(base_dir, 'hmdb_compounds.p')\n",
     "    hmdb_compounds = load_obj(compound_file)\n",
     "except FileNotFoundError:\n",
-    "    # download the entire HMDB metabolite database\n",
-    "    url = 'http://www.hmdb.ca/system/downloads/current/hmdb_metabolites.zip'\n",
-    "    out_file = download_file(url)\n",
-    "    compounds = extract_hmdb_metabolite(out_file, delete=True)\n",
-    "    save_obj(compounds, compound_file)"
+    "    \n",
+    "    # download the entire HMDB metabolite database and extract chemicals from it\n",
+    "    # url = 'http://www.hmdb.ca/system/downloads/current/hmdb_metabolites.zip'\n",
+    "    # out_file = download_file(url)\n",
+    "    # compounds = extract_hmdb_metabolite(out_file, delete=True)\n",
+    "    # save_obj(compounds, compound_file)\n",
+    "    \n",
+    "    # above could be quite slow slow, so download a pre-processed result instead\n",
+    "    url = 'https://github.com/glasgowcompbio/vimms-data/raw/main/hmdb_compounds.p'\n",
+    "    download_file(url, compound_file)"
    ]
   }
  ],
@@ -270,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
