--- a/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
@@ -70,9 +70,6 @@
    "outputs": [],
    "source": [
     "from vimms.FeatureExtraction import extract_hmdb_metabolite\n",
-    "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import SimpleMs1Controller\n",
-    "from vimms.FeatureExtraction import extract_roi\n",
     "from vimms.Common import set_log_level_debug, download_file, extract_zip_file, load_obj"
    ]
   },
@@ -129,20 +126,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating C:\\Users\\joewa\\Work\\git\\vimms\\examples\\01. vimms (Wandy et al 2019)\\example_data\n"
+      "Creating /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:56:31.386 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
+      "2022-02-25 11:09:43.682 | INFO     | vimms.Common:download_file:453 - Downloading example_data.zip\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "562dead3f068422fadc3dfaca5978623",
+       "model_id": "8d072d0e9d86438abbee01b5f7da10e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,13 +154,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:56:36.405 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
+      "2022-02-25 11:09:46.658 | INFO     | vimms.Common:extract_zip_file:466 - Extracting example_data.zip\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "413cce6a8cb34699845b80b313a792ec",
+       "model_id": "9d4c9f4e38734d7b916cc6918e6ab880",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:56:37.947 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
+      "2022-02-25 11:09:47.431 | INFO     | vimms.Common:extract_zip_file:473 - Deleting example_data.zip\n"
      ]
     }
    ],
@@ -215,14 +212,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 16:56:38.103 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in C:\\Users\\joewa\\Work\\git\\vimms\\examples\\01. vimms (Wandy et al 2019)\\example_data\\hmdb_compounds.p. Please regenerate this file.\n",
-      "2022-02-24 16:56:39.715 | INFO     | vimms.Common:download_file:453 - Downloading C:\\Users\\joewa\\Work\\git\\vimms\\examples\\01. vimms (Wandy et al 2019)\\example_data\\hmdb_compounds.p\n"
+      "2022-02-25 11:09:47.468 | WARNING  | vimms.Common:load_obj:344 - Old, invalid or missing pickle in /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data/hmdb_compounds.p. Please regenerate this file.\n",
+      "2022-02-25 11:09:48.338 | INFO     | vimms.Common:download_file:453 - Downloading /Users/joewandy/Work/git/vimms/examples/01. vimms (Wandy et al 2019)/example_data/hmdb_compounds.p\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2629b8bc2f334c43968699c41fb3787a",
+       "model_id": "87f90a90a47f483dbbb802d070401dc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
